istio/ip-blocks/allow-from-whitelisted-ip.yaml
# kalo udah patch deployment istio-ingressgateway dan apply envoyfilter, baru apply ini
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-from-whitelist
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway  # Label yang sesuai
  action: ALLOW
  rules:
  - from:
    - source:
        remoteIpBlocks:
        - "15.235.163.196"  # IP yang di-whitelist
        - "103.113.135.98"

    to:
    - operation:
        hosts:
        - "vault.sallystore.my.id"  # host yang mau lu whitelist
        - "argocd.sallystore.my.id"
        - "prometheus.sallystore.my.id"
